--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2c583051-5437-4631-8e6c-3d83571befef"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
